<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/therapy_details_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/background_linear"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/background_linear" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/better"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/background_linear"
                app:layout_constraintBottom_toBottomOf="@id/background_linear"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/logo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study"
                android:textSize="24sp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/logo"
                app:layout_constraintStart_toEndOf="@id/logo"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/background_linear"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/events_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:itemCount="5"
                tools:listitem="@layout/item_event" />

            <View
                android:id="@+id/background_line"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="20dp"
                android:background="@color/rose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/events_list" />

            <TextView
                android:id="@+id/news_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/background_line"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/all_news_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_news"
                android:textSize="14sp"
                android:textColor="@color/blue_op60"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                app:layout_constraintTop_toTopOf="@id/news_label"
                app:layout_constraintBottom_toBottomOf="@id/news_label"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/news_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/news_label"
                tools:itemCount="5"
                tools:listitem="@layout/item_news" />

            <View
                android:id="@+id/background_line2"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="20dp"
                android:background="@color/rose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/news_list" />

            <TextView
                android:id="@+id/schedule_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/background_line2"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/all_schedule_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_news"
                android:textSize="14sp"
                android:textColor="@color/blue_op60"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                app:layout_constraintTop_toTopOf="@id/schedule_label"
                app:layout_constraintBottom_toBottomOf="@id/schedule_label"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/schedule_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/schedule_label"
                tools:itemCount="3"
                tools:listitem="@layout/item_schedule" />

            <View
                android:id="@+id/background_line3"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="20dp"
                android:background="@color/rose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/schedule_list" />

            <TextView
                android:id="@+id/homework_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homework"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/background_line3"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/course_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fizika - domaća zadaća 1"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/homework_layout"
                app:layout_constraintStart_toStartOf="@id/homework_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/homework_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/background_rounded_corners"
                android:backgroundTint="@color/blue_light"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homework_label">

                <TextView
                    android:id="@+id/title_homework"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_homework"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/pencale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pencale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/button_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/background_rounded_corners"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pencale"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp"
                        android:text="Pokreni rješavanje zadaće"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>